--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
 </head>
-<body>
+<b.ody>
     <header>
         <nav>
             <ul>
@@ -23,10 +23,41 @@
                 <li><a href="#">Only on Apple</a></li>
                 <li><a href="#">Accessories</a></li>
                 <li><a href="#">Support</a></li>
-                <li><a href="#"></a></li>
-                <li><a href="#"></a></li>
+                <li><a href="#"><i class="bi bi-search"></i></a></li>
+                <li><a href="#"><i class="bi bi-bag"></i></a></li>
             </ul>
         </nav>
     </header>
-</body>
+    <!-- !main -->
+    <section id="main">
+        <div class="nav">
+            <p>Get up to ₹10000 instant savings on selected products with HDFC Bank credit cards.‡ Plus No Cost EMI from most leading banks.‡‡ <a href="#">Shop now ></a> </p>
+        </div>
+        <div class="main">
+            <h1><a href="#">MacBook Pro</a></h1>
+            <p>Supercharged by M2 and M2 Max.</p>
+            <div class="links">
+                <a href="#">Learn more ></a>
+                <a href="#">Buy ></a>
+            </div>
+        </div>
+        <div class="main macmini">
+            <h1><a href="#">Mac mini</a></h1>
+            <p>Supercharged by M2 and M2 Pro.</p>
+            <div class="links">
+                <a href="#">Learn more ></a>
+                <a href="#">Buy ></a>
+            </div>
+        </div>
+        <div class="main Homepod">
+            <h1><a href="#">HomePod</a></h1>
+            <p>Profound sound.</p>
+            <p>Available starting from 3 Feb</p>
+            <div class="links">
+                <a href="#">Learn more ></a>
+                <a href="#">Orde now ></a>
+            </div>
+        </div>
+    </section>
+</b.ody>
 </html>
