--- a/index.html
+++ b/index.html
@@ -59,5 +59,48 @@
             </div>
         </div>
     </section>
+    <!-- !Box -->
+    <section class="grid">
+        <div class="grid_1">
+            <div class="iphone_14_pro">
+               <h1>iPhone 14 Pro</h1> 
+               <p>Pro. Beyond.</p>
+               <span>With superfast 5G*</span>
+               <div class="link_">
+                    <a href="#">Learn more ></a>
+                    <a href="#">Buy ></a>
+                </div>
+            </div>
+            <div class="iphone_14">
+                <h1>iPhone 14</h1> 
+               <p>Big and bigger</p>
+               <span>With superfast 5G*</span>
+               <div class="link_">
+                    <a href="#">Learn more ></a>
+                    <a href="#">Buy ></a>
+                </div>
+            </div>
+        </div>
+        <div class="grid_1">
+            <div class="apple_watch">
+               <h1>Creativity and community.</h1>
+               <h1>Woven together.</h1>
+               <h5>Explore the new Black Unity watch strap and matching face.</h5>
+               <div class="link_">
+                    <a href="#">Learn more ></a>
+                    <a href="#">Buy ></a>
+                </div>
+            </div>
+            <div class="series8">
+                <h1><i class="bi bi-apple"></i>WATCH</h1> 
+               <p>SERIES 8</p>
+               <span>A healthy leap ahead</span>
+               <div class="link_">
+                    <a href="#">Learn more ></a>
+                    <a href="#">Buy ></a>
+                </div>
+            </div>
+        </div>
+    </section>
 </b.ody>
 </html>
