--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
     <header>
         <nav>
             <ul>
+
+                <li class="ham"><a href="#"><i class="bi bi-list"></i></a></li>
                 <li><a href="#"><i class="bi bi-apple"></i></a></li>
-                <li><a href="#">Store</a></li>
-                <li><a href="#">Mac</a></li>
-                <li><a href="#">iPad</a></li>
-                <li><a href="#">iPhone</a></li>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">AirPods</a></li>
-                <li><a href="#">TV & Home</a></li>
-                <li><a href="#">Only on Apple</a></li>
-                <li><a href="#">Accessories</a></li>
-                <li><a href="#">Support</a></li>
-                <li><a href="#"><i class="bi bi-search"></i></a></li>
+                <li class="none"><a href="#">Store</a></li>
+                <li class="none"><a href="#">Mac</a></li>
+                <li class="none"><a href="#">iPad</a></li>
+                <li class="none"><a href="#">iPhone</a></li>
+                <li class="none"><a href="#">Watch</a></li>
+                <li class="none"><a href="#">AirPods</a></li>
+                <li class="none"><a href="#">TV & Home</a></li>
+                <li class="none"><a href="#">Only on Apple</a></li>
+                <li class="none"><a href="#">Accessories</a></li>
+                <li class="none"><a href="#">Support</a></li>
+                <li class="none"><a href="#"><i class="bi bi-search"></i></a></li>
                 <li><a href="#"><i class="bi bi-bag"></i></a></li>
             </ul>
         </nav>
