--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <p>Supercharged by M2 and M2 Max.</p>
             <div class="links">
                 <a href="#">Learn more ></a>
-                <a href="#">Buy ></a>
+                <a href="#">Buy</a>
             </div>
         </div>
         <div class="main macmini">
@@ -48,7 +48,7 @@
             <p>Supercharged by M2 and M2 Pro.</p>
             <div class="links">
                 <a href="#">Learn more ></a>
-                <a href="#">Buy ></a>
+                <a href="#">Buy</a>
             </div>
         </div>
         <div class="main Homepod">
@@ -57,7 +57,7 @@
             <p>Available starting from 3 Feb</p>
             <div class="links">
                 <a href="#">Learn more ></a>
-                <a href="#">Orde now ></a>
+                <a href="#">Orde now</a>
             </div>
         </div>
     </section>
