--- a/index.html
+++ b/index.html
@@ -138,7 +138,17 @@
     </section>
     <!-- !footer -->
     <footer>
-        vdm
+        <div class="msg">
+            <p>*Data plan is required. 5G is available in selected markets and through selected carriers. Speeds vary based on site conditions and carrier. For details on 5G support, contact your carrier and see apple.com/in/iphone/cellular.</p>
+            <p>‡Instant savings, otherwise referred to as Instant Cashback on the Apple Store Online, is available with the purchase of an eligible product for qualifying HDFC Bank Credit Cards & HDFC Bank Credit Card EMI only. Minimum transaction value of ₹10001 applies. Click here to see instant savings amounts and eligible devices. Instant savings is available for up to two orders per rolling 90-day period with an eligible card. Card eligibility is subject to terms and conditions between you and your card-issuing bank. Total transaction value is calculated after any trade-in credit or eligible discount applied. Any subsequent order adjustment(s) or cancellation(s) may result in instant savings being recalculated, and any refund may be adjusted to account for instant savings clawback; this may result in no refund being made to you. Offer may be revised or withdrawn at any time without any prior notice. Terms and conditions apply. Offer cannot be combined with Apple Store for Education or Corporate Employee Purchase Plan pricing. Multiple separate orders cannot be combined for instant savings.</p>
+            <p>Get extra trade-in credit, otherwise referred to as additional exchange savings or exchange bonus, when you trade in an eligible iPhone and purchase a new Apple device until 5 March 2023. Extra trade-in credit of ₹5000 is available while trading in iPhone 12, iPhone 11, iPhone XR or iPhone X and ₹4500 on iPhone 7.</p>
+            <p>‡‡No Cost EMI is available with the purchase of an eligible product made using qualifying credit or debit cards on 3- or 6-month tenures from most leading banks. Minimum order spend applies as per your credit or debit card’s issuing bank threshold. Offer cannot be combined with Apple Store for Education or Corporate Employee Purchase Plan pricing. Credit or debit card eligibility is subject to terms and conditions between you and your credit or debit card–issuing bank. Offer may be revised or withdrawn at any time without any prior notice. Terms & conditions apply.</p>
+            <p>Representative example: Based off a 6-month tenure. iPhone 14 at ₹79900 total cost includes 14% p.a. and No Cost EMI savings of ₹3164, paid over 6 months as six monthly payments of ₹13317.</p>
+        </div>
+        <hr>
+        <div class="footer_list">
+            
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
