--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </header>
     <!-- !main -->
     <section id="main">
-        <div class="nav">
+        <div class="navbar_">
             <p>Get up to ₹10000 instant savings on selected products with HDFC Bank credit cards.‡ Plus No Cost EMI from most leading banks.‡‡ <a href="#">Shop now ></a> </p>
         </div>
         <div class="main">
@@ -151,7 +151,6 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
